--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,9 @@
     "url": "https://github.com/hiphan/idle-bot-messenger/issues"
   },
   "homepage": "https://github.com/hiphan/idle-bot-messenger#readme",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.88.0"
   }
 }
